--- a/02_Python_Essentials/L06-containers/L06_dictionary.ipynb
+++ b/02_Python_Essentials/L06-containers/L06_dictionary.ipynb
@@ -322,7 +322,7 @@
     "if search in student_scores:\n",
     "    print(f\" {search} score is available.\")\n",
     "else:\n",
-    "    print(f\" {search} score is not found.\")\n"
+    "    print(f\" {search} score is not found.\")"
    ]
   },
   {
@@ -336,7 +336,7 @@
     "if search in student_scores.keys():\n",
     "    print(f\" {search} score is available.\")\n",
     "else:\n",
-    "    print(f\" {search} score is not found.\")\n"
+    "    print(f\" {search} score is not found.\")"
    ]
   },
   {
@@ -453,14 +453,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4ac8ef39-f327-4bbb-bb5b-11edb7198ce7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 14,
    "id": "b9ce7070-cb13-406e-835d-3bf98753d0e3",
    "metadata": {},
@@ -477,6 +469,14 @@
     "# show me how many elements there are in dict\n",
     "print(len(student_scores))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4ac8ef39-f327-4bbb-bb5b-11edb7198ce7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -529,18 +529,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "788af760-a3dd-4547-8941-d3c22e8b414b",
+   "execution_count": null,
+   "id": "838a1d56-855d-4d2b-9309-30854f66ac11",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " Eve score is not found.\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "48ba55dc-3d99-4b87-bab0-6e09a372888b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b22d0d82-2f68-4599-8f11-016db33c3812",
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
@@ -593,7 +601,7 @@
     }
    ],
    "source": [
-    "# (SKIP) remove style2\n",
+    "# remove style2\n",
     "student_scores = {\n",
     "   \"Surendar\": 85, \n",
     "   \"Bob\": 92,\n",
@@ -629,6 +637,102 @@
     "student_scores.clear()\n",
     "print(student_scores)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "01182a48-902b-4de2-bf4b-50839543354b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8d1ba61a-c267-461a-bfa8-e290ec3d43b5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "232c00f9-284c-488a-9082-9b25b2a1feb9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3afc21e4-5a82-4cee-a8eb-bf56b3e3f385",
+   "metadata": {},
+   "source": [
+    "### Merging Two Dictionaries (update() & | Operator)\n",
+    "Scenario: Merging student scores from two classes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "05d798f2-40f8-4872-9a11-aa15399e9e17",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# merge 2 dict\n",
+    "\n",
+    "class_a = {\"Archie\": 85,\n",
+    "           \"Bono\": 92\n",
+    "}\n",
+    "\n",
+    "class_b = {\"Yanni\": 78, \n",
+    "           \"Weyn\" : 88,\n",
+    "           \"Zena\" : 54\n",
+    "}\n",
+    "\n",
+    "# Method 1: Using update()\n",
+    "merged_scores = class_a.copy()\n",
+    "merged_scores.update(class_b)\n",
+    "\n",
+    "print(merged_scores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a2b8bf5-0e5b-4ca4-b783-c927efd5a16e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Method 2: Using `|` operator (Python 3.9+)\n",
+    "\n",
+    "merged_scores = class_a | class_b\n",
+    "\n",
+    "print(merged_scores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7c1fc439-9ec8-4d3d-8935-8e7355d60617",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "218259d4-067c-469c-8f85-c1f39809211f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a89c7be1-16fe-4659-9ab9-e864bace2816",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -699,67 +803,18 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "9fe1ab6c-5706-4777-9299-fe5c5e992e8a",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "056441ff-540f-4760-af20-d1b2c2471b2e",
    "metadata": {},
-   "source": [
-    "# Advanced operations in dictionary"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
    "id": "9f5fed48-79a4-4d9d-b5a9-45fba31bb68e",
    "metadata": {},
-   "source": [
-    "### 1. Merging Two Dictionaries (update() & | Operator)\n",
-    "Scenario: Merging student scores from two classes."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "428c8aeb-5b3e-4b1a-8287-9e122f876795",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'Archie': 85, 'Bono': 92, 'Charlie': 78, 'David': 88, 'Zena': 54}\n",
-      "{'Archie': 85, 'Bono': 92, 'Charlie': 78, 'David': 88, 'Zena': 54}\n"
-     ]
-    }
-   ],
-   "source": [
-    "# merge 2 dict\n",
-    "\n",
-    "class_a = {\"Archie\": 85,\n",
-    "           \"Bono\": 92\n",
-    "}\n",
-    "\n",
-    "class_b = {\"Charlie\": 78, \n",
-    "           \"David\": 88,\n",
-    "           \"Zena\": 54\n",
-    "}\n",
-    "\n",
-    "# Method 1: Using update()\n",
-    "merged_scores = class_a.copy()\n",
-    "merged_scores.update(class_b)\n",
-    "\n",
-    "print(merged_scores)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "212bf6b1-9865-4cc5-bb48-451e60af1bd5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Method 2: Using `|` operator (Python 3.9+)\n",
-    "merged_scores = class_a | class_b\n",
-    "print(merged_scores)"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
