--- a/02_Python_Essentials/L09-file-handling/L09-5_CSV_ASSIGNMENT_list_dict_for_read_CSV_.ipynb
+++ b/02_Python_Essentials/L09-file-handling/L09-5_CSV_ASSIGNMENT_list_dict_for_read_CSV_.ipynb
@@ -5,11 +5,14 @@
    "id": "59266008-c710-4aa8-bce5-120731eaac76",
    "metadata": {},
    "source": [
-    "# assignment: \n",
-    "Read a csv file and store the data as key: value pair. \n",
-    "The keys should be name. \n",
-    "The values should be stored in list and it contains age,income. \n",
-    "All entries in values should be int. "
+    "# Assignment: \n",
+    "Read a csv file \"L09-5_CSV_ASSIGNMENT_list_dict_for.csv\" and store the data as key: value pair. \n",
+    "\n",
+    "The keys should be name. The values should be stored in list and it contains age,income. \n",
+    "\n",
+    "All entries in values should be int. \n",
+    "\n",
+    "Print the content of dictionary"
    ]
   },
   {
@@ -41,13 +44,12 @@
     }
    ],
    "source": [
-    "# STEP1: Read the CSV file\n",
     "import csv\n",
     "\n",
     "# Path to your CSV file\n",
-    "file_path = \"assignment_list_dict_for.csv\"\n",
+    "file_path = \"L09-5_CSV_ASSIGNMENT_list_dict_for.csv\"\n",
     "\n",
-    "# Read CSV into a list\n",
+    "# STEP1: Read the CSV file into a list\n",
     "data = []\n",
     "with open(file_path, mode=\"r\", newline=\"\", encoding=\"utf-8\") as file:\n",
     "    reader = csv.reader(file)\n",
