--- a/02_Python_Essentials/L11-module-math-random-datetime/PROJECT_list_dict_enumerate_input_quiz.ipynb
+++ b/02_Python_Essentials/L11-module-math-random-datetime/PROJECT_list_dict_enumerate_input_quiz.ipynb
@@ -12,98 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "dced76a0-5c76-48ff-967d-79e33fbc6cf3",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Question 1:\n",
-      "Which planet is known as the Red Planet??\n",
-      "  a) jupiter\n",
-      "  b) mars\n",
-      "  c) mercury\n",
-      "  d) venus\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Choice?  d\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The answer is 'mars', not 'venus'\n",
-      "\n",
-      "Question 2:\n",
-      "Which planet is the largest in our solar system??\n",
-      "  a) earth\n",
-      "  b) jupiter\n",
-      "  c) neptune\n",
-      "  d) saturn\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Choice?  b\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Correct!\n",
-      "\n",
-      "You got 1 correct out of 2 questions\n"
-     ]
-    }
-   ],
-   "source": [
-    "from string import ascii_lowercase\n",
-    "\n",
-    "QUESTIONS = {\n",
-    "    \"Which planet is known as the Red Planet?\": [\n",
-    "        \"mars\", \"jupiter\", \"venus\", \"mercury\",\n",
-    "    ],\n",
-    "    \"Which planet is the largest in our solar system?\": [\n",
-    "        \"jupiter\", \"saturn\", \"neptune\", \"earth\",\n",
-    "    ],\n",
-    "}\n",
-    "\n",
-    "num_correct = 0\n",
-    "for num, (question, alternatives) in enumerate(QUESTIONS.items(), start=1):\n",
-    "    print(f\"\\nQuestion {num}:\")\n",
-    "    print(f\"{question}?\")\n",
-    "    correct_answer = alternatives[0]\n",
-    "    labeled_alternatives = dict(zip(ascii_lowercase, sorted(alternatives)))\n",
-    "    for label, alternative in labeled_alternatives.items():\n",
-    "        print(f\"  {label}) {alternative}\")\n",
-    "\n",
-    "    answer_label = input(\"\\nChoice? \")\n",
-    "    answer = labeled_alternatives.get(answer_label)\n",
-    "    if answer == correct_answer:\n",
-    "        num_correct += 1\n",
-    "        print(\"Correct!\")\n",
-    "    else:\n",
-    "        print(f\"The answer is {correct_answer!r}, not {answer!r}\")\n",
-    "\n",
-    "print(f\"\\nYou got {num_correct} correct out of {num} questions\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "2df33e61-2350-4f85-9dda-c601755438ec",
    "metadata": {},
    "outputs": [
@@ -121,7 +30,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "\n",
@@ -143,7 +52,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "\n",
@@ -163,9 +72,10 @@
    "source": [
     "# Advanced quiz\n",
     "import random\n",
-    "from string import ascii_lowercase\n",
     "\n",
     "NUM_QUESTIONS_PER_QUIZ = 5\n",
+    "\n",
+    "# Answer is first entry in values\n",
     "QUESTIONS = {\n",
     "    \"Which planet is known as the Red Planet?\": [\n",
     "        \"mars\", \"jupiter\", \"venus\", \"mercury\",\n",
@@ -175,31 +85,41 @@
     "    ],\n",
     "}\n",
     "\n",
+    "# Manually defined labels\n",
+    "LABELS = ['a', 'b', 'c', 'd']\n",
+    "\n",
     "num_questions = min(NUM_QUESTIONS_PER_QUIZ, len(QUESTIONS))\n",
     "questions = random.sample(list(QUESTIONS.items()), k=num_questions)\n",
     "\n",
     "num_correct = 0\n",
+    "\n",
     "for num, (question, alternatives) in enumerate(questions, start=1):\n",
     "    print(f\"\\nQuestion {num}:\")\n",
     "    print(f\"{question}?\")\n",
+    "\n",
     "    correct_answer = alternatives[0]\n",
-    "    labeled_alternatives = dict(\n",
-    "        zip(ascii_lowercase, random.sample(alternatives, k=len(alternatives)))\n",
-    "    )\n",
+    "\n",
+    "    shuffled_alternatives = random.sample(alternatives, k=len(alternatives))\n",
+    "    labeled_alternatives = dict(zip(LABELS, shuffled_alternatives))\n",
+    "\n",
     "    for label, alternative in labeled_alternatives.items():\n",
     "        print(f\"  {label}) {alternative}\")\n",
     "\n",
-    "    while (answer_label := input(\"\\nChoice? \")) not in labeled_alternatives:\n",
+    "    while True:\n",
+    "        answer_label = input(\"\\nChoice? \").lower()\n",
+    "        if answer_label in labeled_alternatives:\n",
+    "            break\n",
     "        print(f\"Please answer one of {', '.join(labeled_alternatives)}\")\n",
     "\n",
     "    answer = labeled_alternatives[answer_label]\n",
+    "\n",
     "    if answer == correct_answer:\n",
     "        num_correct += 1\n",
     "        print(\"Correct!\")\n",
     "    else:\n",
     "        print(f\"The answer is {correct_answer!r}, not {answer!r}\")\n",
     "\n",
-    "print(f\"\\nYou got {num_correct} correct out of {num} questions\")"
+    "print(f\"\\nYou got {num_correct} correct out of {num} questions\")\n"
    ]
   },
   {
