--- a/02_Python_Essentials/L02-variables/L02-0print.ipynb
+++ b/02_Python_Essentials/L02-variables/L02-0print.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "e724929f-5c74-4032-aa07-f4e32aaadc65",
    "metadata": {
     "colab": {
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "acbda49d-28e0-4718-95ef-05dc8ae8d2df",
    "metadata": {},
    "outputs": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "65bb1a99-0543-4a19-bc25-2e0250e79e27",
    "metadata": {},
    "outputs": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "a5e91f0d-b4ef-467a-9115-1e05ab6d3c98",
    "metadata": {},
    "outputs": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "5b867645-8e99-49e3-a334-c63aa97d9338",
    "metadata": {},
    "outputs": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "9239b98b-05df-4bc2-bf43-a99600872c9b",
    "metadata": {},
    "outputs": [
@@ -125,6 +125,7 @@
    ],
    "source": [
     "# using comma , to print series of stmts \n",
+    "\n",
     "print(\"2 Hello world.\", \"Today its raining.\")\n",
     "print(\"3 Hello world.\", \"Today its raining.\", \"It is going to be humid today.\", \"Good luck\")"
    ]
@@ -132,12 +133,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc6c79b4-5338-4261-bb11-f72816fcc328",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "id": "84eb8c43",
+   "metadata": {},
    "outputs": [],
    "source": [
     "# 2"
@@ -153,7 +150,10 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# using + to print series of strings.\n",
+    "print(\"4 Hello world.\" + \"Today its raining.\" + \"It is going to be humid today.\")"
+   ]
   },
   {
    "cell_type": "code",
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "5d385f47-06c3-4cd1-b9e3-8e4fd0105ee6",
    "metadata": {},
    "outputs": [
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "7da3f4b4-d729-444d-ba6e-f785b326d840",
    "metadata": {},
    "outputs": [
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "id": "78666afc-7e03-4058-9c9b-87828dbb0175",
    "metadata": {},
    "outputs": [
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "id": "41b6a4b6-ff38-4262-a872-4a7a5efeeb58",
    "metadata": {},
    "outputs": [
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "id": "ac3ea28f-0fef-430f-834e-4c0844713c29",
    "metadata": {},
    "outputs": [
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "id": "c1eb4949-0cb2-4361-84c8-24b42dc57acf",
    "metadata": {},
    "outputs": [
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "aa607c52-4c1f-42eb-9570-423e7fde9870",
    "metadata": {},
    "outputs": [
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "id": "b7313d77-ab95-4986-b4d6-22f2516c1747",
    "metadata": {},
    "outputs": [
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "id": "5931f66d-5f75-4cd6-aacf-2abf9b34c7c5",
    "metadata": {},
    "outputs": [
@@ -761,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "86c6d458-1592-4966-a2d0-ec3631b743ce",
    "metadata": {
     "jupyter": {
@@ -808,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "id": "ca4069d4-6fee-440a-a222-80a5c10f676c",
    "metadata": {
     "colab": {
@@ -852,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "id": "7ec8e4ef-b209-42dd-b357-d8def0f341ce",
    "metadata": {
     "jupyter": {
@@ -872,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "id": "34ec893d-6853-47a7-828a-b18274a509c9",
    "metadata": {
     "jupyter": {
@@ -921,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "id": "d0154143-8028-4e7a-8b31-4c5ae2b05bc7",
    "metadata": {
     "jupyter": {
@@ -944,7 +944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "id": "8c437cba-a018-4184-b43d-7b18715c4b9f",
    "metadata": {
     "jupyter": {
@@ -963,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "id": "c2b61c22-734d-4f71-9a71-2fbddb4e2963",
    "metadata": {
     "jupyter": {
@@ -1009,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "id": "9d7a2430-f4f4-455c-97f2-031dc18fe736",
    "metadata": {
     "jupyter": {
@@ -1041,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "id": "b59af8eb-06f1-4813-9a04-37b84a2d2471",
    "metadata": {
     "jupyter": {
@@ -1080,7 +1080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "id": "b0af087e-0a3c-485e-82cb-aea476ab3afd",
    "metadata": {
     "jupyter": {
@@ -1119,7 +1119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "id": "e28dbac1-627c-4c1b-a1ae-ac70b6c52dca",
    "metadata": {
     "jupyter": {
@@ -1171,7 +1171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "id": "391596b2-ab94-4f2c-a39b-8d9a8774fb09",
    "metadata": {
     "jupyter": {
@@ -1195,7 +1195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "id": "65db1ff5-9c05-47fb-b8a4-8cd53d960682",
    "metadata": {
     "jupyter": {
@@ -1233,7 +1233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "id": "ebcc6ad1-fc09-4e6b-97fd-788d46459144",
    "metadata": {
     "id": "ebcc6ad1-fc09-4e6b-97fd-788d46459144",
