--- a/02_Python_Essentials/L11-module-math-random-datetime/L11-1-module-math.ipynb
+++ b/02_Python_Essentials/L11-module-math-random-datetime/L11-1-module-math.ipynb
@@ -14,6 +14,7 @@
     "## What is a Module?\n",
     "\n",
     "A **module** is a file that contains **useful functions and variables**.\n",
+    "\n",
     "Python already comes with many **built-in modules**, and one of the most common is the **`math` module**.\n",
     "\n",
     "The `math` module helps us perform **mathematical operations** easily.\n"
@@ -31,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "05a849e7-f717-4bb8-b0dd-fdbab4537593",
    "metadata": {},
    "outputs": [],
@@ -41,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "7c214bfe-c25f-4dd5-9a6b-8d718e5e0dba",
    "metadata": {},
    "outputs": [
@@ -49,14 +50,57 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['__doc__', '__loader__', '__name__', '__package__', '__spec__', 'acos', 'acosh', 'asin', 'asinh', 'atan', 'atan2', 'atanh', 'cbrt', 'ceil', 'comb', 'copysign', 'cos', 'cosh', 'degrees', 'dist', 'e', 'erf', 'erfc', 'exp', 'exp2', 'expm1', 'fabs', 'factorial', 'floor', 'fmod', 'frexp', 'fsum', 'gamma', 'gcd', 'hypot', 'inf', 'isclose', 'isfinite', 'isinf', 'isnan', 'isqrt', 'lcm', 'ldexp', 'lgamma', 'log', 'log10', 'log1p', 'log2', 'modf', 'nan', 'nextafter', 'perm', 'pi', 'pow', 'prod', 'radians', 'remainder', 'sin', 'sinh', 'sqrt', 'tan', 'tanh', 'tau', 'trunc', 'ulp']\n"
+      "['__doc__', '__loader__', '__name__', '__package__', '__spec__', 'acos', 'acosh', 'asin', 'asinh', 'atan', 'atan2', 'atanh', 'ceil', 'comb', 'copysign', 'cos', 'cosh', 'degrees', 'dist', 'e', 'erf', 'erfc', 'exp', 'expm1', 'fabs', 'factorial', 'floor', 'fmod', 'frexp', 'fsum', 'gamma', 'gcd', 'hypot', 'inf', 'isclose', 'isfinite', 'isinf', 'isnan', 'isqrt', 'lcm', 'ldexp', 'lgamma', 'log', 'log10', 'log1p', 'log2', 'modf', 'nan', 'nextafter', 'perm', 'pi', 'pow', 'prod', 'radians', 'remainder', 'sin', 'sinh', 'sqrt', 'tan', 'tanh', 'tau', 'trunc', 'ulp']\n"
      ]
     }
    ],
    "source": [
     "# Checking What’s Inside the Math Module\n",
+    "\n",
     "print(dir(math))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "99da7c31-efc8-4b75-a0cc-f9b73d39d89c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cbc203d8-ad40-42e2-a0cf-022637dad511",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d486b53b-d302-4a03-818f-37afe90f5059",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "62af915e-cf57-4bb3-b7f7-ebfdb12d29d9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2766842b-e8b0-4bde-a257-6d775a883658",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -76,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "75250b63-0870-4b54-95c6-24970f76dded",
    "metadata": {},
    "outputs": [
@@ -92,14 +136,14 @@
     "### Square Root\n",
     "a = 25\n",
     "\n",
-    "result = math.sqrt(25)\n",
+    "result = math.sqrt(a)\n",
     "\n",
     "print(result)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "c4bb8dd8-4268-4d31-81f7-719171f88c12",
    "metadata": {},
    "outputs": [
@@ -121,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "9e569dc1-6a66-4814-a558-bc4e9907e4b4",
    "metadata": {},
    "outputs": [
@@ -145,6 +189,56 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f9b00c62-b1da-40d4-98bc-fd54e391ffa9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "daa095b7-c116-4db8-b6df-4e25ccdd035a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6c7ab192-d089-4aaf-a9bc-0bdde988e1b8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1d40cdf9-2541-42ce-bc7b-fd0728ef8293",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f4e641aa-0251-4a00-8925-ba16a105031a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9aaf42b5-26c7-4758-a1fc-f0f6d84bb304",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "ba5e41d1-32c4-4135-aed7-81662e99158d",
    "metadata": {},
    "outputs": [],
@@ -160,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "id": "0d6250de-7c49-4cee-8a7e-3bc1a5cad9b2",
    "metadata": {},
    "outputs": [
@@ -183,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "9caf90f2-ee69-4481-a2a8-d2ce82b4a171",
    "metadata": {},
    "outputs": [
@@ -205,6 +299,32 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "159716d1-2cec-4413-9146-5582a15a40a9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c6d72644-ca09-4109-8c33-e39e0792d535",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "30c9e576-63a4-44bb-b6ec-8a64f54df21e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8e7e9af1-1bcb-4196-9e63-4e8d6d290179",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -239,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "id": "66faa2a8-1272-4565-9049-ab5f28ed2fb9",
    "metadata": {},
    "outputs": [
@@ -247,19 +367,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.5707963267948966\n"
+      "1.0471975511965976\n"
      ]
     }
    ],
    "source": [
-    "angle_deg = 90\n",
+    "# convert degrees to radians\n",
+    "\n",
+    "angle_deg = 60\n",
+    "\n",
     "angle_rad = math.radians(angle_deg)\n",
+    "\n",
     "print(angle_rad)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "id": "2c6a7f0b-d8f0-4358-a778-ffc707282c1c",
    "metadata": {},
    "outputs": [
@@ -267,16 +391,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.0\n",
-      "6.123233995736766e-17\n",
-      "1.633123935319537e+16\n"
+      "0.8660254037844386\n",
+      "0.5000000000000001\n",
+      "1.7320508075688767\n"
      ]
     }
    ],
    "source": [
     "### Sine, Cosine, Tangent\n",
     "\n",
-    "angle_rad = math.radians(90)\n",
+    "angle_rad = math.radians(60)\n",
     "\n",
     "print(math.sin(angle_rad))\n",
     "\n",
@@ -284,6 +408,48 @@
     "\n",
     "print(math.tan(angle_rad))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d5d83a94-b73a-41a9-912a-daaed47ac6bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7138933c-3b9e-4bc2-a054-16d079dcb3b5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f6b45afa-0fd8-4ef9-9395-81999d78243c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5546ed41-ebfd-498a-a148-ec6cd3e22593",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4f84f96e-c23b-440d-820e-a137595a2bd9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -303,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "id": "4bc4c802-dc00-4fa1-97fc-bbc8564d82c0",
    "metadata": {},
    "outputs": [
@@ -311,19 +477,68 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.141592653589793\n",
+      "3.141592653589793\n"
+     ]
+    }
+   ],
+   "source": [
+    "### Pi\n",
+    "print(math.pi)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "36eac6ee-5b55-4ef6-b91c-39d18fe3eef1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "2.718281828459045\n"
      ]
     }
    ],
    "source": [
-    "### π (Pi)\n",
-    "print(math.pi)\n",
-    "\n",
-    "\n",
     "### Euler’s Number (e)\n",
+    "\n",
     "print(math.e)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a229d66d-1313-42fb-90f9-bc64db981a9b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2e19e818-e98f-4dd3-abd8-5359fa99649d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "678eb23d-d29e-426b-b6ba-afe82b551732",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "44457231-596e-477b-b9fa-0387204c956b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -343,18 +558,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "7be356dc-97fb-400d-ac33-43e14ed92e24",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0\n"
+     ]
+    }
+   ],
    "source": [
     "### Natural Log (base e)\n",
-    "print(math.log(math.e))\n",
-    "\n",
-    "\n",
+    "print(math.log(math.e))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "c93dec5e-e5b4-4d19-b7d0-1a3e27dc6c68",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.0\n"
+     ]
+    }
+   ],
+   "source": [
     "### Log Base 10\n",
     "print(math.log10(100))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1292d8ca-7e51-486c-b6b3-5e7ede36cc01",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7f5f1194-3c08-4868-b9d8-346c7894a162",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "64d32ac5-a6aa-42c7-beaf-4839e9754325",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -374,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 26,
    "id": "3bc30401-0b8b-47f6-9df0-726426f66f19",
    "metadata": {},
    "outputs": [
@@ -387,8 +651,44 @@
     }
    ],
    "source": [
+    "# factorial : 5! = 5 * 4 * 3 * 2 * 1\n",
+    "\n",
     "print(math.factorial(5))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "047e2764-6172-4d5c-b683-047739b20397",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "33429817-3380-4ca0-8010-8dd020a47d3c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f741c13d-8a3e-49c7-a746-d919b88a10e3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6eb445db-e988-4d83-b5f0-ac304c4d5849",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -403,12 +703,12 @@
    "id": "54b1d31e-e445-494b-913e-51ec64fb7270",
    "metadata": {},
    "source": [
-    "### Example 1: Area of a Circle"
+    "### Example: Area of a Circle"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 27,
    "id": "3771f65a-2a3e-4b8a-9559-b0ffc50f785a",
    "metadata": {},
    "outputs": [
@@ -425,6 +725,40 @@
     "area = math.pi * math.pow(radius, 2)\n",
     "print(area)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0f716ad8-344e-469f-a928-0c4b474882ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8601ff49-468b-4636-b6ec-3f8fee623d5c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3a45bac3-2f28-4024-bb67-abc0bf1db871",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "57b54db0-e95a-4fd6-a7a8-18d48f0712c5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -488,7 +822,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.9.9"
   }
  },
  "nbformat": 4,
